kubernetes/visualizer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: visualizer-ingress
  namespace: visualizer
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: visualizer-frontend
            port:
              number: 80
